# bubby

./: .env.example  .gitignore  AUDIT_STATUS.md  LICENSE  PHASE1_COMPLETE.md  PHASE2_PART1_COMPLETE.md  PHASE2_PART2_COMPLETE.md  PHASE2_PART2_PLAN.md  PHASE2_PLAN.md  PHASE3_PART1_COMPLETE.md  PHASE3_PART2_COMPLETE.md  PHASE3_PLAN.md  PHASE4_PART1_COMPLETE.md  PHASE7A_PLAN.md  README.md  TEST_PHASE1.md  bubby.service  pyproject.toml  requirements.txt  run_autonomous.py  run_bubby.sh  setup.sh  test_animation.py  test_autonomous_integration.py  test_behavior_vision_integration.py  test_brain.py  test_capture.py  test_critic_policy_rag.py  test_event_bus.py  test_feedback_loop.py  test_integrated_brain.py  test_local_llm.py  test_long_term_memory.py  test_memory_buffer.py  test_mobile_auth.py  test_mobile_bridge.py  test_omni_integration.py  test_overlay.py  test_persona_synthesis.py  test_phase3_integration.py  (+7 more)
bubby_core/: Cargo.toml  build.sh
bubby_core/src/: agency.rs  broadcast.rs  ipc.rs  lib.rs  main.rs  memory.rs  mtls.rs  security.rs  vector.rs
mobile/: OfflineBridgeService.kt
scripts/: beta_test.py  daemon.sh  download_llm.py  download_sprites.py  download_vlm.py  download_voice.py  generate_icon.py  install_desktop_entry.sh
src/: app.py
src/actions/: __init__.py  executor.py  policy.py
src/brain/: __init__.py  autonomy_loop.py  behavior_tree.py  context_manager.py  critic.py  decisions.py  factory.py  graph_builder.py  proactivity.py  reasoning.py
src/bridge/: bubby_bridge.py
src/capture/: wayland_capture.py
src/data/: __init__.py
(+48 files in other folders)
